rename fil, legge til seksjon boks som et start for hjemmesiden og skrevet noe i python scriptet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>To-do list</title>
 </head>
 <body>
-    
+    <section class="box">
+        <p class="task"></p>
+    </section>
 </body>
 </html>
