--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <title>To-do list</title>
 </head>
 <body>
-    <section class="box">
-        <p class="task"></p>
-    </section>
+    <div class="container">
+        <h1>To-do list</h1>
+
+        <form action="{{ url-for('add task') }}" method="post">
+            <input type="text" name="content" placeholder="New task..." required>
+            <button type="submit">Add task</button>
+        </form>
+
+        <ul class="task-list">
+            {% for task in tasks %}
+                <li class="{{ 'completed' if task.completed else '' }}"></li>
+                    {{task.content}}
+                    <a href="{{ url_for('complete task', task_id=task.id) }}" class="complete-btn">
+                        {%if task.completed%} Angre {% else %} Fullfør {% endif %}
+                    </a>
+        </ul>
+    </div>
 </body>
 </html>
