style i CSS for hvordan det skal settes opp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>To-do list</title>
 </head>
@@ -11,7 +14,7 @@
         <h1>To-do list</h1>
 
         <form id="task">
-            <input type="text" id="newTask" placeholder="New task..." required>
+            <input type="text" id="newTask" placeholder="New task...">
             <button type="submit">Add task</button>
         </form>
         <ul id="taskList"></ul>
