--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>To-do list</h1>
 
-        <form id="task">
+        <form id="task-form">
             <input type="text" id="newTask" placeholder="New task...">
             <button type="submit">Add task</button>
         </form>
